# inqress

./: .dockerignore  .gitignore  Dockerfile  README.md  install.sh  start_docker_build_and_test.sh
.github/workflows/: backend-lint.yml  docker-build.yml  frontend-lint.yml
backend/: env.py  main.py  pyproject.toml
backend/schema/: orm.py
backend/service/: db.py
backend/src/: alembic.ini  config.py  env.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: ad4d1efc7092_initial_schema.py
backend/src/api/: admin.py  attendees.py  booth.py  checkin.py  deps.py  events.py  excel.py  health.py  info.py  participants.py  spreadsheet.py  streams.py  utils.py
backend/src/assets/: default_email_template.html  ticket_template.css  ticket_template.html
backend/src/schema/: booth.py  enum.py  orm.py  rest.py  service.py  sse.py
backend/src/service/: admin_stream.py  attendees.py  auth.py  booth_stream.py  checkin.py  db.py  email.py  event_stream.py  events.py  excel.py  participants.py  spreadsheet.py  ticket.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: api.ts  main.tsx  router.tsx
frontend/src/components/: AttendeeGrid.tsx  BoothControlPanel.tsx  ConflictDialog.tsx  DataHandlingStep.tsx  MermaidDiagram.tsx  ParticipantGrid.tsx  ProgressCard.tsx
frontend/src/hooks/: useAdminStream.ts  useBoothStream.ts  useConfetti.ts  useEventStream.ts  useEventStream.tsx
frontend/src/layouts/: AppShell.tsx  FullPage.tsx
frontend/src/providers/: AppInfoProvider.tsx  BasicAuthProvider.tsx  useAppInfo.ts  (+2 more)
(+57 files in other folders)
