[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "phonenumbers>=9.0.30",
    "pyyaml>=6.0.2",
    "pyseto>=1.9.3",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
