[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "phonenumbers>=9.0.30",
    "pyyaml>=6.0.2",
    "pyseto>=1.9.3",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.49",
    "rapidfuzz>=3.14.5",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "types-qrcode>=8.2.0.20260518",
    "types-PyYAML>=6.0.12",
    "types-openpyxl>=3.1.0",
]

[tool.mypy]
mypy_path = "src"
